Update: 1 Separación de JS to-do y pomodoro para mejorar trazabilidad, 2 Homologación de lenguaje a inglés, 3 Implementación de permanencia de data en localStorage para tareas activas. Fix: 1 Botón reanudar permanecia visible después de pausar y detener, 2 Intento de renderizar fuente digital en GH Pages

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'DS-Digit';
-    src: url("/assets/DS-DIGIT.TTF");
+    src: url("./assets/DS-DIGIT.TTF");
 }
 
 body {
@@ -76,7 +76,7 @@ button {
     background-color: #EEEEEE;
 }
 
-.transparent-btn {
+.btn-transparent {
     padding: 0;
     border: none;
     background-color: transparent;
@@ -84,7 +84,7 @@ button {
     aspect-ratio: 1/1 !important;
 }
 
-.transparent-btn img {
+.btn-transparent img {
     height: 100%;
     width: 100%;
 }
@@ -134,50 +134,13 @@ input[type="checkbox"] {
     text-decoration-color: #222831;
 }
 
-.pomodoro {
+.pomodoro-container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 
     padding: 1rem;
-}
-
-.timer-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 2.5rem;
-    padding: 0 1.25rem;
-}
-
-#timer {
-    font-family: "DS-Digit", 'Open Sans', sans-serif;
-    text-transform: uppercase;
-    font-size: 6rem;
-}
-
-.cycle-container {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
-    text-align: left;
-    font-size: 1.25rem;
-}
-
-
-.modal-container {
-    z-index: 1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100dvw;
-    height: 100dvh;
-    display: flex;
-    align-items: center;
-    place-content: center;
-    background-color: rgba(39, 39, 39, 0.664);
 }
 
 .modal {
@@ -257,17 +220,53 @@ input[type='range']:active {
     text-align: center;
 }
 
-.secondary-btn {
+.btn-secondary {
     background-color: transparent;
     color: #fff;
     outline: #FFD369 1px solid;
 
 }
 
-.primary-btn {
+.btn-primary {
     background-color: #FFD369;
     color: #222831;
     outline: #222831 1px solid;
+}
+
+.timer-container {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2.5rem;
+    padding: 0 1.25rem;
+}
+
+#timer {
+    font-family: "DS-Digit", 'Open Sans', sans-serif;
+    font-size: 6rem;
+}
+
+.cycle-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: left;
+    font-size: 1.25rem;
+}
+
+
+.modal-container {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100dvw;
+    height: 100dvh;
+    display: flex;
+    align-items: center;
+    place-content: center;
+    background-color: rgba(39, 39, 39, 0.664);
 }
 
 
@@ -278,7 +277,7 @@ input[type='range']:active {
     gap: 1rem;
 }
 
-.control-btn {
+.btn-control {
     height: 2.5rem;
     padding: 0;
     background-color: #fff;
@@ -286,7 +285,7 @@ input[type='range']:active {
     border: 1px solid #FFD369;
 }
 
-.control-btn img {
+.btn-control img {
     width: 100%;
     height: 100%;
 }
@@ -296,7 +295,7 @@ input[type='range']:active {
         width: 40%;
     }
 
-    .secondary-btn {
+    .btn-secondary {
         display: none;
     }
 
